Drop back to PyLint v1.7 when the --py3k flag is used

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -46,7 +46,8 @@ list_dependencies_command = {envbindir}/python {envbindir}/pip freeze
 
 [testenv:py27]
 commands =
-  python --version && pip --version
+  python --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -59,7 +60,8 @@ commands =
 # See https://docs.python.org/2/library/sys.html#sys.platform for platform codes
 platform = linux2
 commands =
-  python --version && pip --version
+  python --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -68,7 +70,8 @@ commands =
 [testenv:py27-gcp]
 extras = test,gcp
 commands =
-  python --version && pip --version
+  python --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
@@ -82,7 +85,8 @@ deps =
   isort==4.2.15
   flake8==3.5.0
 commands =
-  pylint --version && pip --version
+  pylint --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint.sh
 
@@ -114,7 +118,8 @@ modules =
   apache_beam/typehints
   apache_beam/transforms
 commands =
-  pylint --version && pip --version
+  pylint --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_pylint_2to3.sh {[testenv:py27-lint3]modules}
 
@@ -129,15 +134,11 @@ deps =
 setenv =
     BEAM_EXPERIMENTAL_PY3=1
 commands =
-  pylint --version && pip --version
+  pylint --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_mini_py3lint.sh
-  echo $HOME
-  time flake8 $HOME --count --select=E9,F821,F822,F823 --show-source --statistics
-  echo {toxinidir}/../..
   time flake8 {toxinidir} --count --select=E9,F821,F822,F823 --show-source --statistics
-  time flake8 {toxinidir}/../.. --count --select=E9,F821,F822,F823 --show-source --statistics
-  echo $JENKINS_HOME
   time flake8 $JENKINS_HOME --count --select=E9,F821,F822,F823 --show-source --statistics
 
 [testenv:docs]
@@ -146,7 +147,8 @@ deps =
   Sphinx==1.6.5
   sphinx_rtd_theme==0.2.4
 commands =
-  python --version && pip --version
+  python --version
+  pip --version
   time {toxinidir}/scripts/generate_pydoc.sh
 
 [testenv:cover]
@@ -154,7 +156,8 @@ commands =
 deps =
   coverage==4.4.1
 commands =
-  python --version && pip --version
+  python --version
+  pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   # Clean up previously collected data.
   coverage erase
