Put a space between --exclude= and --select=

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -138,7 +138,7 @@ commands =
   pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
   time {toxinidir}/scripts/run_mini_py3lint.sh
-  time flake8 {toxinidir} --count --exclude={toxinidir}/build/gradleenv--select=E9,F821,F822,F823 --show-source --statistics
+  time flake8 {toxinidir} --count --exclude={toxinidir}/build/gradleenv --select=E9,F821,F822,F823 --show-source --statistics
   time flake8 $JENKINS_HOME --count --select=E9,F821,F822,F823 --show-source --statistics
 
 [testenv:docs]
