--- a/examples/java/build.gradle
+++ b/examples/java/build.gradle
@@ -20,6 +20,7 @@ import groovy.json.JsonOutput
 
 apply plugin: org.apache.beam.gradle.BeamModulePlugin
 applyJavaNature()
+applyGrpcNature()
 provideIntegrationTestingDependencies()
 enableJavaPerformanceTesting()
 
