py3 support with first test in tox

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -17,7 +17,7 @@
 
 [tox]
 # new environments will be excluded by default unless explicitly added to envlist.
-envlist = py27,py27-{gcp,cython,lint,lint3},py3-lint,docs
+envlist = py27,py3,py27-{gcp,cython,lint,lint3},py3-lint,docs
 toxworkdir = {toxinidir}/target/.tox
 
 [pycodestyle]
@@ -51,6 +51,16 @@ commands =
   {toxinidir}/scripts/run_tox_cleanup.sh
   python apache_beam/examples/complete/autocomplete_test.py
   python setup.py nosetests
+  {toxinidir}/scripts/run_tox_cleanup.sh
+
+[testenv:py3]
+setenv =
+  BEAM_EXPERIMENTAL_PY3=1
+commands =
+  python --version
+  pip --version
+  {toxinidir}/scripts/run_tox_cleanup.sh
+  python setup.py nosetests --tests apache_beam.runners.direct.direct_metrics_test:DirectMetricsTest.test_combiner_functions
   {toxinidir}/scripts/run_tox_cleanup.sh
 
 [testenv:py27-cython]
