Revert "Modify build file to make PostCommit only run BigQueryToTableIT. Will revert before merge."
This reverts commit 3247145

--- a/runners/google-cloud-dataflow-java/build.gradle
+++ b/runners/google-cloud-dataflow-java/build.gradle
@@ -146,8 +146,7 @@ task googleCloudPlatformIntegrationTest(type: Test) {
           "--tempRoot=${dataflowTempRoot}",
   ])
 
-  //include '**/*IT.class'
-  include '**/BigQueryToTableIT.class'
+  include '**/*IT.class'
   exclude '**/PubsubReadIT.class'
   maxParallelForks 4
   classpath = configurations.googleCloudPlatformIntegrationTest
