Run py2to3 pylint on apache_beam module

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -98,30 +98,11 @@ deps =
   future==0.16.0
   isort==4.2.15
   flake8==3.5.0
-modules =
-  apache_beam/coders
-  apache_beam/runners
-  apache_beam/examples
-  apache_beam/portability
-  apache_beam/io
-  apache_beam/internal
-  apache_beam/metrics
-  apache_beam/options
-  apache_beam/utils
-  apache_beam/error
-  apache_beam/pipeline
-  apache_beam/pipeline_test
-  apache_beam/pvalue
-  apache_beam/pvalue_test
-  apache_beam/testing
-  apache_beam/tools
-  apache_beam/typehints
-  apache_beam/transforms
 commands =
   pylint --version
   pip --version
   {toxinidir}/scripts/run_tox_cleanup.sh
-  time {toxinidir}/scripts/run_pylint_2to3.sh {[testenv:py27-lint3]modules}
+  time {toxinidir}/scripts/run_pylint_2to3.sh
 
 
 [testenv:py3-lint]
