specify localhost for portable flink VR tests

--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -72,6 +72,6 @@ runShadow {
 
 createPortableValidatesRunnerTask(
         jobServerDriver: "org.apache.beam.runners.flink.FlinkJobServerDriver",
-        jobServerConfig: "--clean-artifacts-per-job",
+        jobServerConfig: "--clean-artifacts-per-job,--job-host=localhost",
         testClasspathConfiguration: configurations.validatesPortableRunner
 )
