Fix Flink job server slf4j binding issue resulting from #6284

--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -48,6 +48,7 @@ dependencies {
   validatesPortableRunner project(path: ":beam-runners-core-java", configuration: "shadowTest")
   validatesPortableRunner project(path: ":beam-runners-reference-java", configuration: "shadowTest")
   compile project(path: ":beam-sdks-java-extensions-google-cloud-platform-core", configuration: "shadow")
+  compile library.java.slf4j_simple
 //  TODO: Enable AWS and HDFS file system.
 }
 
