[BEAM-5355] Add GroupByKeyLoadIT

--- a/sdks/java/load-tests/build.gradle
+++ b/sdks/java/load-tests/build.gradle
@@ -25,6 +25,9 @@ enableJavaPerformanceTesting()
 description = "Apache Beam :: SDKs :: Java :: Load Tests"
 
 dependencies {
-  testCompile library.java.junit
+  shadowTest project(path: ":beam-sdks-java-core", configuration: "shadowTest")
+  shadowTest project(path: ":beam-runners-direct-java", configuration: "shadowTest")
+  shadowTest project(path: ":beam-sdks-java-io-synthetic", configuration: "shadowTest")
+  shadowTest library.java.junit
 }
 
