--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -304,7 +304,7 @@ def flinkCompatibilityMatrix = {
   tasks.create(name: name) {
     dependsOn 'setupVirtualenv'
     dependsOn ':beam-sdks-python-container:docker'
-    dependsOn ':beam-runners-flink_2.11-job-server:jar'
+    dependsOn ':beam-runners-flink_2.11-job-server:shadowJar'
     doLast {
       exec {
         executable 'sh'
