[BEAM-5373] No-Op registrar now has id of its own. Kryo dependency changed to 'shadow'.

--- a/sdks/java/extensions/euphoria/euphoria-core/build.gradle
+++ b/sdks/java/extensions/euphoria/euphoria-core/build.gradle
@@ -27,7 +27,7 @@ ext {
 
 dependencies {
     shadow project(path: ":beam-sdks-java-core", configuration: "shadow")
-    compile "com.esotericsoftware:kryo:${kryoVersion}"
+    shadow "com.esotericsoftware:kryo:${kryoVersion}"
     shadow library.java.guava
     testCompile library.java.mockito_core
     testCompile project(path: ':beam-sdks-java-extensions-euphoria-testing')
