[BEAM-5317] Finish Python3 porting for options module

--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -57,7 +57,7 @@ commands =
 setenv =
   BEAM_EXPERIMENTAL_PY3=1
 modules =
-  apache_beam.coders,apache_beam.tools,apache_beam.utils
+  apache_beam.coders,apache_beam.options,apache_beam.tools,apache_beam.utils
 commands =
   python --version
   pip --version
