Exclude website PULL_REQUEST_TEMPLATE from Rat.

--- a/build.gradle
+++ b/build.gradle
@@ -116,7 +116,7 @@ rat {
 
   def exclusions = [
     // Ignore files we track but do not distribute
-    ".github/**/*",
+    "**/.github/**/*",
 
     "**/package-list",
     "**/user.avsc",
