--- a/.test-infra/metrics/docker-compose.yml
+++ b/.test-infra/metrics/docker-compose.yml
@@ -43,6 +43,18 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_NAME=Beam
       - GF_INSTALL_PLUGINS=vonage-status-panel
+  syncjenkins:
+    image: syncjenkins
+    container_name: beamsyncjenkins
+    build:
+      context: ./sync/jenkins
+      dockerfile: Dockerfile
+    environment:
+      - JENSYNC_HOST=beampostgresql
+      - JENSYNC_PORT=5432
+      - JENSYNC_DBNAME=beam_metrics
+      - JENSYNC_DBUSERNAME=admin
+      - JENSYNC_DBPWD=<PGPasswordHere>
 volumes:
   beam-postgresql-data:
   beam-grafana-libdata:
