Use dynamic port while running Flink PVR

--- a/runners/flink/job-server/build.gradle
+++ b/runners/flink/job-server/build.gradle
@@ -74,6 +74,6 @@ runShadow {
 
 createPortableValidatesRunnerTask(
         jobServerDriver: "org.apache.beam.runners.flink.FlinkJobServerDriver",
-        jobServerConfig: "--clean-artifacts-per-job,--job-host=localhost",
+        jobServerConfig: "--clean-artifacts-per-job,--job-host=localhost,--job-port=0,--artifact-port=0",
         testClasspathConfiguration: configurations.validatesPortableRunner
 )
